[package]
name = "kanji_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.5"
console_error_panic_hook = "0.1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enclose = "1.1"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'HtmlElement',
    'HtmlDivElement',
    'HtmlButtonElement',
    'HtmlInputElement',
    'HtmlDataListElement',
    'HtmlSelectElement',
    'HtmlFormElement',
    'HtmlOptionElement',
    'Event',
    'RequestInit',
    'Request',
    'RequestMode',
    'Response',
    'Headers',
    'Window',
    'Location',
    'DomTokenList',
    'MouseEvent',
]